First draft of import progress reporting